Modified: 'grid-template-rows' for GuideCard component fixed to 'auto 1fr' to avoid overflowing.

--- a/client/src/components/GuideCard/GuideCard.css
+++ b/client/src/components/GuideCard/GuideCard.css
@@ -4,7 +4,7 @@
 	grid-template-areas: "title icon"
 						 "description icon";
 	grid-template-columns: 1fr auto;
-	grid-template-rows: 2ch 1fr;
+	grid-template-rows: auto 1fr;
 	row-gap: var(--spacing);
 	align-items: center;
 }
